[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "rik"
version = "0.1.0"
description = "Routine utilities for image processing and visualization."
authors = ["Zac Swider <zac.swider@gmail.com>"]
license = "MIT"
readme = "README.md"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.extras]
testing = ["pytest", "pytest-cov", "tox"]


[tool.poetry.urls]
"Repository" = "https://github.com/zacswider/routine_image_kit"
